tests/baselines/reference/constructorStaticParamNameErrors.errors.txt
tests/cases/compiler/constructorStaticParamNameErrors.ts(4,18): error TS1003: Identifier expected.


==== tests/cases/compiler/constructorStaticParamNameErrors.ts (1 errors) ====
    'use strict'
    // static as constructor parameter name should give error if 'use strict'
    class test {
        constructor (static) { }
                     ~~~~~~
!!! error TS1003: Identifier expected.
    }